 2014-03-22 20:56  robocop 
   M src/jrd/vio.cpp
Misc.

 2014-03-22 20:51  robocop 
   M src/common/classes/sparse_bitmap.h
   M src/dsql/Parser.cpp
   M src/jrd/Optimizer.cpp
   M src/jrd/extds/ExtDS.cpp
   M src/jrd/jrd.cpp
   M src/jrd/met.epp
   M src/jrd/os/vms/vmslock.cpp
   M src/jrd/pag.cpp
   M src/jrd/recsrc/FullTableScan.cpp
   M src/jrd/sdw.cpp
   M src/jrd/shut.cpp
   M src/jrd/svc.cpp
   M src/jrd/tra.cpp
   M src/jrd/validation.cpp
   M src/lock/lock.cpp
   M src/qli/expand.cpp
   M src/qli/picstr.cpp
Misc.

 2014-03-22 16:54  dimitr 
   M src/remote/server/os/win32/property.rc
More correct textual description.

 2014-03-21 23:05  robocop 
   M src/remote/server/os/win32/property.cpp
   M src/remote/server/os/win32/property.rc
   M src/remote/server/os/win32/property.rh
Windows only: I prefer to know from the properties dialog when the Server is using the -m startup option.

 2014-03-21 23:03  robocop 
   M doc/sql.extensions/README.ddl_triggers.txt
   M src/dsql/ExprNodes.cpp
   M src/jrd/opt.cpp
Misc.

 2014-03-21 18:57  dimitr 
   M src/jrd/Optimizer.cpp
This should fix the regression reported in fb-devel.

 2014-03-19 22:31  hvlad 
   M src/dsql/BoolNodes.cpp
   M src/dsql/BoolNodes.h
   M src/dsql/ExprNodes.cpp
   M src/dsql/ExprNodes.h
Additional patch for CORE-3362 : Cursors should ignore changes made by the same statement:
- fixed error when "NOT IN" expression is turned into (better optimized) equivalent expression: 
  new RseBoolNode's lost parentForNode member (required later to [not]set stable cursor savepoint)
- replaced pointer to outer ForNode (parentForNode) by boolean flag (ownSavepoint) - it simplifies cloning of nodes

 2014-03-19 16:19  asfernandes 
   M src/yvalve/YObjects.h
   M src/yvalve/why.cpp
Warnings.

 2014-03-19 16:19  asfernandes 
   M src/isql/isql.epp
Revert the behavior of SHOW command without a database connection. It makes sense for SHOW SQL DIALECT.

 2014-03-18 16:33  asfernandes 