@@ -1,3 +1,7 @@
+ 2014-03-24 09:46  alexpeshkoff 
+   M src/common/classes/sparse_bitmap.h
+fixed build
+
  2014-03-22 20:56  robocop 
    M src/jrd/vio.cpp
 Misc.
